docs-archive/apache-airflow-providers-keycloak/0.11.0/_sources/_api/airflow/providers/keycloak/auth_manager/keycloak_auth_manager/index.rst.txt
airflow.providers.keycloak.auth_manager.keycloak_auth_manager
=============================================================

.. py:module:: airflow.providers.keycloak.auth_manager.keycloak_auth_manager


Attributes
----------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.keycloak_auth_manager.log
   airflow.providers.keycloak.auth_manager.keycloak_auth_manager.RESOURCE_ID_ATTRIBUTE_NAME
   airflow.providers.keycloak.auth_manager.keycloak_auth_manager.TEAM_SCOPED_RESOURCES


Classes
-------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.keycloak_auth_manager.KeycloakAuthManager


Module Contents
---------------

.. py:data:: log

.. py:data:: RESOURCE_ID_ATTRIBUTE_NAME
   :value: 'resource_id'


.. py:data:: TEAM_SCOPED_RESOURCES

.. py:class:: KeycloakAuthManager

   Bases: :py:obj:`airflow.api_fastapi.auth.managers.base_auth_manager.BaseAuthManager`\ [\ :py:obj:`airflow.providers.keycloak.auth_manager.user.KeycloakAuthManagerUser`\ ]


   Keycloak auth manager.

   Leverages Keycloak to perform authentication and authorization in Airflow.


   .. py:property:: http_session
      :type: requests.Session


      Lazy-initialize and return the requests session with connection pooling.



   .. py:method:: deserialize_user(token)

      Create a user object from dict.



   .. py:method:: serialize_user(user)

      Create a subject and extra claims dict from a user object.



   .. py:method:: generate_api_jwt(user, *, expiration_time_in_seconds = conf.getint('api_auth', 'jwt_expiration_time'))

      Return a JWT for a client that authenticates with the ``Authorization`` header.

      Such a client sends no cookies, so the Keycloak tokens have to travel in the
      claims for the request to be authorized.

      :param user: the user to generate the token for
      :param expiration_time_in_seconds: expiration time in seconds of the token



   .. py:method:: get_user_from_token(token, access_token = None, refresh_token = None)
      :async:


      Get the user from the Airflow and Keycloak Tokens.

      :param token: Airflow JWT
      :param access_token: Keycloak access JWT
      :param refresh_token: Keycloak refresh JWT



   .. py:method:: get_url_login(**kwargs)

      Return the login page url.



   .. py:method:: get_url_logout()

      Return the logout page url.

      The user is redirected to this URL when logging out. If None is returned (by default), no redirection
      is performed. This redirection is usually needed to invalidate resources when logging out, such as a
      session.



   .. py:method:: refresh_user(*, user)

      Refresh the user if needed.

      By default, does nothing. Some auth managers might need to refresh the user to, for instance,
      refresh some tokens that are needed to communicate with a service/tool.

      This method is called by every single request, it must be lightweight otherwise the overall API
      server latency will increase.



   .. py:method:: refresh_tokens(*, user)


   .. py:method:: is_authorized_configuration(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on configuration.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the configuration



   .. py:method:: is_authorized_connection(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on a connection.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the connection



   .. py:method:: is_authorized_dag(*, method, user, access_entity = None, details = None)

      Return whether the user is authorized to perform a given action on a Dag.

      :param method: the method to perform
      :param user: the user to performing the action
      :param access_entity: the kind of Dag information the authorization request is about.
          If not provided, the authorization request is about the Dag itself
      :param details: optional details about the Dag



   .. py:method:: is_authorized_backfill(*, method, user, details = None)


   .. py:method:: is_authorized_asset(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on an asset.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the asset



   .. py:method:: is_authorized_asset_alias(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on an asset alias.

      :param method: the method to perform
      :param user: the user to perform the action on
      :param details: optional details about the asset alias



   .. py:method:: is_authorized_variable(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on a variable.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the variable



   .. py:method:: is_authorized_pool(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on a pool.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the pool



   .. py:method:: is_authorized_team(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on a team.

      It is used primarily to check whether a user belongs to a team.
      This function needs to be overridden by an auth manager compatible with multi-team.

      :param method: the method to perform
      :param user: the user performing the action
      :param details: optional details about the team



   .. py:method:: is_authorized_view(*, access_view, user, team_name = None)

      Return whether the user is authorized to access a read-only state of the installation.

      :param access_view: the specific read-only view/state the authorization request is about.
      :param user: the user to performing the action
      :param team_name: team the view is scoped to, if any. Managers without multi-team
          support may accept and ignore it, which authorizes the view globally.



   .. py:method:: is_authorized_custom_view(*, method, resource_name, user)

      Return whether the user is authorized to perform a given action on a custom view.

      A custom view can be a view defined as part of the auth manager. This view is then only available when
      the auth manager is used as part of the environment. It can also be a view defined as part of a
      plugin defined by a user.

      :param method: the method to perform.
          The method can also be a string if the action has been defined in a plugin.
          In that case, the action can be anything (e.g. can_do).
          See https://github.com/apache/airflow/issues/39144
      :param resource_name: the name of the resource
      :param user: the user to performing the action



   .. py:method:: filter_authorized_menu_items(menu_items, *, user)

      Filter menu items based on user permissions.

      :param menu_items: list of all menu items
      :param user: the user



   .. py:method:: get_fastapi_app()

      Specify a sub FastAPI application specific to the auth manager.

      This sub application, if specified, is mounted in the main FastAPI application.



   .. py:method:: get_fastapi_middlewares()

      Return middlewares the auth manager wants registered on the main FastAPI app.

      Each entry is a ``(middleware_class, kwargs)`` tuple and is registered via
      ``app.add_middleware`` by the API server. Auth managers that need to intercept or
      augment incoming requests (for example, attaching an anonymous user to
      unauthenticated requests when public access is configured) should override this
      method.



   .. py:method:: get_cli_commands()
      :staticmethod:


      Vends CLI commands to be included in Airflow CLI.



   .. py:method:: get_keycloak_client(client_id = None, client_secret = None)
      :staticmethod:


      Get a KeycloakOpenID client instance.

      :param client_id: Optional client ID to override config. If provided, client_secret must also be provided.
      :param client_secret: Optional client secret to override config. If provided, client_id must also be provided.



   .. py:method:: filter_authorized_dag_ids(*, dag_ids, user, method = 'GET', team_name = None)

      Filter Dags the user has access to.

      By default, check individually if the user has permissions to access the Dag.
      Can lead to some poor performance. It is recommended to override this method in the auth manager
      implementation to provide a more efficient implementation.

      :param dag_ids: the set of Dag ids
      :param user: the user
      :param method: the method to filter on
      :param team_name: the name of the team associated to the Dags if Airflow environment runs in
          multi-team mode



   .. py:method:: batch_is_authorized_connection(requests, *, user)

      Batch version of ``is_authorized_connection``.

      By default, calls individually the ``is_authorized_connection`` API on each item in the list of requests.
      Can lead to some poor performance. It is recommended to override this method in the auth manager
      implementation to provide a more efficient implementation.

      :param requests: a list of requests containing the parameters for ``is_authorized_connection``
      :param user: the user to performing the action



   .. py:method:: batch_is_authorized_dag(requests, *, user)

      Batch version of ``is_authorized_dag``.

      By default, calls individually the ``is_authorized_dag`` API on each item in the list of requests.
      Can lead to some poor performance. It is recommended to override this method in the auth manager
      implementation to provide a more efficient implementation.

      :param requests: a list of requests containing the parameters for ``is_authorized_dag``
      :param user: the user to performing the action



   .. py:method:: batch_is_authorized_pool(requests, *, user)

      Batch version of ``is_authorized_pool``.

      By default, calls individually the ``is_authorized_pool`` API on each item in the list of requests.
      Can lead to some poor performance. It is recommended to override this method in the auth manager
      implementation to provide a more efficient implementation.

      :param requests: a list of requests containing the parameters for ``is_authorized_pool``
      :param user: the user to performing the action



   .. py:method:: batch_is_authorized_variable(requests, *, user)

      Batch version of ``is_authorized_variable``.

      By default, calls individually the ``is_authorized_variable`` API on each item in the list of requests.
      Can lead to some poor performance. It is recommended to override this method in the auth manager
      implementation to provide a more efficient implementation.

      :param requests: a list of requests containing the parameters for ``is_authorized_variable``
      :param user: the user to performing the action



   .. py:method:: filter_authorized_assets(*, assets, user, method = 'GET')

      Filter assets the user has access to, returning the ids of the authorized ones.

      By default, check individually if the user has permissions to access the asset. An auth manager
      whose ``is_authorized_asset`` performs a remote call must override this method: a deployment can
      hold far more assets than connections or pools, and the default costs one round trip per asset on
      every asset listing.

      :param assets: the assets to filter. Each item carries the asset id, name and uri, so an auth
          manager can authorize on any of them (e.g. restrict by uri prefix).
      :param user: the user
      :param method: the method to filter on



   .. py:method:: filter_authorized_connections(*, conn_ids, user, method = 'GET', team_name = None)

      Filter connections the user has access to.

      By default, check individually if the user has permissions to access the connection.
      Can lead to some poor performance. It is recommended to override this method in the auth manager
      implementation to provide a more efficient implementation.

      :param conn_ids: the set of connection ids (``conn_id``)
      :param user: the user
      :param method: the method to filter on
      :param team_name: the name of the team associated to the connections if Airflow environment runs in
          multi-team mode



   .. py:method:: filter_authorized_pools(*, pool_names, user, method = 'GET', team_name = None)

      Filter pools the user has access to.

      By default, check individually if the user has permissions to access the pool.
      Can lead to some poor performance. It is recommended to override this method in the auth manager
      implementation to provide a more efficient implementation.

      :param pool_names: the set of pool names
      :param user: the user
      :param method: the method to filter on
      :param team_name: the name of the team associated to the connections if Airflow environment runs in
          multi-team mode



   .. py:method:: filter_authorized_variables(*, variable_keys, user, method = 'GET', team_name = None)

      Filter variables the user has access to.

      By default, check individually if the user has permissions to access the variable.
      Can lead to some poor performance. It is recommended to override this method in the auth manager
      implementation to provide a more efficient implementation.

      :param variable_keys: the set of variable keys
      :param user: the user
      :param method: the method to filter on
      :param team_name: the name of the team associated to the connections if Airflow environment runs in
          multi-team mode



